# stardew-offline-data-builder

./: .gitignore  PROJECT.md  README.md  pyproject.toml  sitecustomize.py
.codestable/: attention.md
.codestable/audits/2026-07-18-data-build-pipeline/: finding-01.md  finding-02.md  finding-03.md  finding-04.md  finding-05.md  finding-06.md  index.md
.codestable/features/2026-07-17-steam-game-discovery/: steam-game-discovery-acceptance.md  steam-game-discovery-checklist.yaml  steam-game-discovery-design-review.md  steam-game-discovery-design.md  steam-game-discovery-review.md
.codestable/goals/2026-07-15-phase-1-to-4/: functional-acceptance.md  goal.md  state.yaml
.codestable/goals/2026-07-15-phase-5-to-8/: functional-acceptance.md  goal.md  state.yaml
.codestable/goals/2026-07-16-official-only-data/: functional-acceptance.md  goal.md  state.yaml
data/: aliases.zh-CN.json  categories.zh-CN.json  overrides.zh-CN.json
docs/: 真实官方数据解析推进方向.md
src/builder/: __init__.py  __main__.py  cli.py  config.py  models.py
src/builder/commands/: __init__.py  build.py  (+5 more)
tests/: complete_fixture.py  conftest.py  official_reference_fixture.py  real_official_entities.py  real_official_fixture.py  test_artifact_metadata.py  test_build.py  test_cli.py  test_database.py  test_doctor.py  test_images.py  test_legacy_localization.py  test_legacy_visuals.py  test_match.py  test_match_merge.py  test_normalize.py  test_package.py  test_phase7_generic_types.py  test_quality_gate.py  test_real_official_data.py  test_steam_discovery.py  test_translation_quality.py  test_unpack.py
(+92 files in other folders)
