[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stardew-offline-data-builder"
version = "0.1.0"
description = "Offline data builder for Stardew Valley."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "orjson>=3.10,<4.0",
    "pydantic>=2.8,<3.0",
    "pypinyin>=0.52,<1.0",
    "rich>=13.8,<14.0",
    "typer>=0.16,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.12,<0.13",
]

[project.scripts]
builder = "builder.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
